selfhost/test/typechecker/map/error_unfilled_holes.2.out
Error at %FILE_NAME%:1:9
Could not determine type for assignment
  |  val m = { (123): None }
             ^
Type 'Map<Int, <unknown>>' has unfilled holes. Please use an explicit type annotation to denote the type
