selfhost/test/typechecker/map/error_unfilled_holes.2.abra
val m = { (123): None }